fix navbar spacing

--- a/app/assets/stylesheets/pages/_index_trips.scss
+++ b/app/assets/stylesheets/pages/_index_trips.scss
@@ -77,10 +77,9 @@ li {
   margin-bottom: 0;
   outline: none;
 
-  // .location {
-  //   margin-top: 5px;
-  //   outline: none !important;
-  // }
+  .location {
+    margin-top: 5px;
+  }
 
   span {
     width: auto;
